<resources>
    <string name="app_name">MyPowerbee</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_github">Github</string>
    <string name="start_activity">Start new activity!</string>
    <string name="finish_activity">Finish Activity</string>

    <string name="key_tracking_mode">key_tracking_mode</string>
    <string name="tracking_mode_left">Left</string>
    <string name="tracking_mode_right">Right</string>
    <string name="tracking_mode_bottom">Bottom</string>
    <string name="tracking_mode_all">All</string>
    <string name="account_hint">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="forgotpwd">Forget Password</string>
    <string name="email">Email</string>
    <string name="confirmPwd">Confirm Password</string>
    <string name="verification_code_get">Get verification code</string>
    <string name="verification_code">verification code</string>
    <string name="notifyTitle">Prompt</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">Set Up</string>
    <string name="cancel">Cancel</string>

    <string name="user_not_exist">User does not exist</string>
    <string name="wrong_password">Wrong password</string>
    <string name="login_fail">Login failed</string>
    <string name="please_enter_account">Please Enter Account</string>
    <string name="register">register</string>
    <string name="email_prompt">Incorrect mailbox format!</string>
    <string name="code_prompt">验证码不能为空！</string>
    <string name="home">首页</string>
    <string name="title">title</string>
    <string name="fragmennt">fragment</string>
    <string name="scene">场景</string>
    <string name="timer">定时器</string>
    <string name="sensor">传感器</string>
</resources>
