<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_middle"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/edit_layout_margin_left_right"
                android:layout_marginRight="@dimen/edit_layout_margin_left_right"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/register_account"
                    style="@style/login_edit_style"

                    android:hint="@string/account_hint" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/margin_middle"
                    android:background="@color/white_little" />

                <EditText
                    android:id="@+id/register_email"
                    style="@style/login_edit_style"
                    android:hint="@string/email" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/margin_middle"
                    android:background="@color/white_little" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/register_verification_code"
                        style="@style/login_edit_style"
                        android:layout_width="wrap_content"
                        android:layout_weight="8"
                        android:hint="@string/verification_code" />

                    <Button
                        android:id="@+id/get_verification_code"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_weight="1"
                        android:background="@drawable/bg_btn_get_verification_code"
                        android:gravity="center"
                        android:text="@string/verification_code_get"
                        android:textSize="@dimen/text_size_small" />

                    <ImageView
                        android:id="@+id/get_verification_code_img"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_weight="1"
                        android:background="@drawable/bg_btn_get_verification_code"
                        android:gravity="center"
                        android:text="@string/verification_code_get"
                        android:textSize="@dimen/text_size_small"
                        android:visibility="gone" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/margin_middle"
                    android:background="@color/white_little" />

                <EditText
                    android:id="@+id/register_pwd"
                    style="@style/login_edit_style"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/margin_middle"
                    android:background="@color/white_little" />

                <EditText
                    android:id="@+id/register_confirm_pwd"
                    style="@style/login_edit_style"
                    android:hint="@string/confirmPwd"
                    android:inputType="textPassword" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/margin_middle"
                    android:background="@color/white_little" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="@dimen/register_margin_top"
                android:background="@drawable/bg_btn_login"
                android:gravity="center"
                android:paddingLeft="@dimen/margin_max_max"
                android:paddingRight="@dimen/margin_max_max"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_more_large" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>