<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Android="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_middle"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_layout_margin_left_right"
            android:layout_marginRight="@dimen/edit_layout_margin_left_right"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_account"
                style="@style/login_edit_style"
                android:hint="@string/account_hint"
                android:text="z" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="@dimen/margin_middle"
                android:background="@color/white_little" />

            <EditText
                android:id="@+id/login_pass"
                style="@style/login_edit_style"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="qqq" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="@dimen/margin_middle"
                android:background="@color/white_little" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_max_max">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_btn_login"
                android:gravity="center"
                android:paddingLeft="@dimen/margin_max_max"
                android:paddingRight="@dimen/margin_max_max"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_more_large" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/btn_login"
                android:layout_marginRight="@dimen/edit_layout_margin_left_right"
                android:layout_marginTop="@dimen/margin_middle">

                <Button
                    android:id="@+id/login_forgot_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/forgotpwd"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_more_small" />

                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/login_forgot_pwd"
                    android:layout_toRightOf="@id/login_forgot_pwd"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/signup"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_more_small" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>